# DesignPatternsCPP

./: .gitignore  CMakeLists.txt  main.cpp
Adapter/: main.cpp
Bridge/: Person.cpp  Person.h  exercise.cpp  main.cpp  pimpl.cpp  pimpl.h
Factories/HotDrink/: DrinkFactory.h  HotDrink.h  HotDrinkFactory.h  main.cpp  scratch.cpp
Factories/Person_builder/: CMakeLists.txt  Person.cpp  Person.h  PersonAddressBuilder.h  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.h  builder.cpp  design_principles.cpp
Prototype/: main.cpp
Singleton/: di.hpp  main.cpp
